@@ -14,7 +14,7 @@
 .\"
 .\" You should have received a copy of the GNU General Public License
 .\" along with pound.  If not, see <http://www.gnu.org/licenses/>.
-.TH POUND 8 "January 19, 2023" "pound" "System Manager's Manual"
+.TH POUND 8 "January 26, 2023" "pound" "System Manager's Manual"
 .SH NAME
 pound \- HTTP/HTTPS reverse-proxy and load-balancer
 .SH SYNOPSIS
@@ -592,9 +592,6 @@ CHECKOUT, MERGE, REPORT).
 .B 3
 additionally allow MS extensions WebDAV verbs (SUBSCRIBE, UNSUBSCRIBE,
 NOTIFY, BPROPFIND, BPROPPATCH, POLL, BMOVE, BCOPY, BDELETE, CONNECT).
-.IP
-.B 4
-additionally allow MS RPC extensions verbs (RPC_IN_DATA, RPC_OUT_DATA).
 .TP
 \fBClient\fR \fIn\fR
 Override the global
